# oculars

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
crates/asm/: Cargo.toml  README.md
crates/asm/src/: assembly.rs  defs.rs  fmt.rs  lib.rs  mnemonic.rs  opcode.rs
crates/asm/src/instruction/: arithmetic.rs  bitwise.rs  block.rs  dup.rs  environment.rs  flow.rs  log.rs  logging.rs  memory.rs  mod.rs  push.rs  stack.rs  storage.rs  swap.rs  system.rs  unknown.rs
crates/asm2/: Cargo.toml
crates/asm2/src/: assembly.rs  defs.rs  instruction.rs  lib.rs  macros.rs  mnemonic.rs  opcode.rs
crates/asm2/src/instruction/: dup.rs  log.rs  mod.rs  push.rs  swap.rs  unknown.rs
crates/assembly/: Cargo.toml
crates/chains/: Cargo.toml
crates/chains/src/: lib.rs
crates/dasm/: Cargo.toml
crates/dasm/src/: assembly.rs  bytecode.rs  disassembler.rs  instruction.rs  lib.rs
crates/dasm/src/source/: bytes.rs  file.rs  hex.rs  mod.rs
crates/disassembler/: Cargo.toml
crates/eips/: Cargo.toml
crates/eips/src/: eip100.rs  eip140.rs  eip150.rs  eip155.rs  eip160.rs  eip161.rs  eip170.rs  eip196.rs  eip197.rs  eip198.rs  eip2.rs  eip211.rs  eip214.rs  eip649.rs  eip658.rs  eip7.rs  lib.rs
crates/eva/: Cargo.toml
crates/eva/src/: lib.rs
crates/forks/: Cargo.toml
crates/forks/src/: byzantium.rs  execution.rs  frontier.rs  frontier_thawing.rs  homestead.rs  lib.rs  network.rs  spurious_dragon.rs  tangerine_whistle.rs
crates/oculars/: Cargo.toml
crates/oculars/src/: lib.rs
crates/upgrades/: Cargo.toml
crates/upgrades/src/: eip.rs  eip_set.rs  execution.rs  lib.rs  network.rs
crates/upgrades/src/eips/: eip100.rs  eip1014.rs  eip1052.rs  eip1108.rs  eip1153.rs  eip1234.rs  eip1283.rs  eip1344.rs  eip140.rs  eip145.rs  eip150.rs  eip152.rs  eip155.rs  eip1559.rs  eip160.rs  eip161.rs  eip170.rs  eip1884.rs  eip196.rs  eip197.rs  eip198.rs  eip2.rs  eip2028.rs  eip211.rs  eip214.rs  eip2200.rs  eip2384.rs  eip2537.rs  eip2565.rs  eip2718.rs  eip2929.rs  eip2930.rs  eip2935.rs  eip3198.rs  eip3529.rs  eip3541.rs  eip3554.rs  eip3651.rs  eip3675.rs  eip3855.rs  (+23 more)
crates/upgrades/src/execution/: arrow_glacier.rs  berlin.rs  byzantium.rs  cancun.rs  constantinople.rs  frontier.rs  frontier_thawing.rs  gray_glacier.rs  homestead.rs  istanbul.rs  london.rs  mod.rs  muir_glacier.rs  paris.rs  petersburg.rs  prague.rs  shanghai.rs  spurious_dragon.rs  tangerine_whistle.rs
crates/upgrades/src/forks/: arrow_glacier.rs  berlin.rs  byzantium.rs  cancun.rs  constantinople.rs  frontier.rs  frontier_thawing.rs  gray_glacier.rs  homestead.rs  istanbul.rs  london.rs  mod.rs  muir_glacier.rs  paris.rs  petersburg.rs  prague.rs  shanghai.rs  spurious_dragon.rs  tangerine_whistle.rs
disassembler/: Cargo.toml
eva/: Cargo.toml
eva/src/: lib.rs
hooks/: pre-commit
scripts/: install-hooks.sh
