[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/evanalyzer/eva"

[workspace.dependencies]
eva-disassembler = { version = "0.1.0", path = "./crates/disassembler/" }

[workspace.lints.clippy]
pedantic = "warn"
