[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/evanalyzer/eva"

[workspace.dependencies]
eva-dasm = { version = "0.1.0", path = "./crates/dasm/" }

strum = { version = "0.27.1", features = ["derive"]}
derive_more = "2.0.1"

[workspace.lints.clippy]
pedantic = "warn"

missing_docs_in_private_items = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"

[workspace.lints.rust]
missing_docs = "warn"
