[workspace]
resolver = "3"
members = [ "bin/*", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/panoptes-sys/oculars"

[workspace.dependencies]
asm = { version = "0.3.0", path = "./crates/asm/" }
dasm = { version = "0.1.0", path = "./crates/dasm/" }

strum = { version = "0.27.1" }
derive_more = "2.0.1"
clap = { version = "4.5.41" }

thiserror = "2.0.12"
anyhow = "1.0.98"

colored = "3.0.0" 
minus = "5.6.1"

[workspace.lints.clippy]
pedantic = "warn"

missing_docs_in_private_items = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"

allow_attributes_without_reason = "warn"
doc_include_without_cfg = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
let_underscore_must_use = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

[workspace.lints.rust]
missing_docs = "warn"
