[package]
name = "eva-asm"
description = "EVM assembly instructions, opcodes and mnemonics"
keywords = ["evm", "ethereum", "bytecode", "assembly"]
categories = ["cryptography::cryptocurrencies", "data-structures"]

version = "0.3.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
strum.workspace = true
derive_more = { workspace = true, features = ["display"] }

[lints]
workspace = true
