[package]
name = "oculars-asm"
description = "EVM assembly instructions, opcodes and mnemonics"
keywords = ["evm", "ethereum", "bytecode", "assembly"]
categories = ["cryptography::cryptocurrencies", "data-structures"]

version = "0.4.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true
