[package]
name = "oculars-dasm"
description = "EVM disassembler"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
asm.workspace = true
upgrades.workspace = true

thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
