[package]
name = "oculars-dasm"
description = "EVM disassembler"
keywords = ["evm", "ethereum", "bytecode", "disassembly"]
categories = ["cryptography::cryptocurrencies"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
asm.workspace = true
upgrades.workspace = true

thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
