[package]
name = "oculars"
description = "EVM analysis toolkit"
categories = ["cryptography::cryptocurrencies"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dasm = { workspace = true }
asm = { workspace = true }

[lints]
workspace = true
