[package]
name = "oculars-upgrades"
description = "Ethereum EIPs and execution upgrades"
keywords = ["evm", "ethereum"]
categories = ["cryptography::cryptocurrencies"]

version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
asm.workspace = true

[lints]
workspace = true
